fix: tooltip style and visibility

--- a/src/components/InteractionalIcon/index.scss
+++ b/src/components/InteractionalIcon/index.scss
@@ -1,3 +1,5 @@
+@import"../../style/variables";
+
 .tooltip:last-of-type button.interactional-button_btn {
   padding: 0;
 }
@@ -14,7 +16,7 @@
     svg {
       height: 16px;
       width: 22px;
-      color: var(--icon-color);
+      color: $icon-color;
       &.up {
         transform: rotate(180deg);
       }
